--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -18,6 +18,7 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708082.md#1" target="_blank">洪达：发送台历遭关押 中共畏惧真善忍</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708082.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/1905181950481973-150x120.jpg" align ="left"></a>据明慧网报导，北京市法轮功学员贾凤芝，二零一九年十一月九日在平谷区东高村免费发放精美真相台历时，被警察绑架、非法关押在平谷区看守所，她的住所和老家均被非法搜查并录像，因为检察院要补充（构陷）材料。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:20 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708009.md#1" target="_blank">严晓：也谈洗脑</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708009.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/42019-06-24.05-150x120.jpg" align ="left"></a>“洗脑”本是极权体制的专利，最近我却发现，中共媒体和其代言人竟也拿着它向香港青少年挥舞，说是他们之所以成为民主自由斗士，是被外来反动势力洗了脑。这倒让我在惊诧之余，有了跟他们理论一番的兴趣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11707812.md#1" target="_blank">【名家专栏】弹劾“专家组”没告诉你这些事</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11707812.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/scholars-at-impeachment-hearing-1200x814-150x120.jpg" align ="left"></a>这篇短文做了美国众议院司法委员会（House Judiciary Committee）的“专家证人”小组应该做却没能做到的事情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 10:55 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712623.md#1" target="_blank">林忌：反抗运动要作持久战</a><br></h3>香港的“反送中”运动至今已经半年，由6月9日的103万人示威，到12月8日的80万人示威，尽管运动受到警方的大量阻碍，武力威吓，以至枪林弹雨，都吓不怕香港市民上街，证明了香港的反抗运动，已经变成一种持续对政府的不合作运动，这不但是香港历史上首见，亦是中共用尽一切方法都无法消灭的状态，因此抗争的阵营内，开始出现了不同的意.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712381.md#1" target="_blank">祝君安：木兰花·辛酸的回归</a><br></h3>香港回归入魔口
 凄风苦雨人消瘦
 烟雾弹里觅自由
@@ -47,6 +48,5 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11707892.md#1" target="_blank">戈壁东：中共威胁要对美国搞恐袭？</a><br></h3>12月4日有一个惊人新闻来自中共官方发言人华春莹，在提到美国众议院12月3日通过的新疆人权法案的时候，为了把新疆的大规模集中营与反恐扯在一起，华春莹特别提到美国遭遇的911恐怖袭击，她的说法是“殷鉴不远，不要好了伤疤忘了痛”。
 
 同一日，针对美国总统特朗普上月底签署《香港人权与民主法案》，CCTV中文网又在脸书上贴.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 11:37 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11707614.md#1" target="_blank">宁静：刘三姐到底是“歌仙”还是红卫兵？</a><br></h3>看过电影《刘三姐》的，一定会被影片一开始的画面所吸引，只见青山绿水间，小舟正在清澈见底的河面上捕鱼，鱼鸥在水面翻腾往来，把鱼送给船头站立着的老翁，这时美丽的歌声从远处顺着江水传来，远远望去，一位美丽的姑娘如同天仙一样飘来，你的心中会自然而然的生出一念，这是神仙来了吗？她就是歌神刘三姐。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 9:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
