--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -12,6 +12,7 @@
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11716956.md#1">º£·ç£ºÖÐ¹²ÉøÍ¸  ÈÃ¡°Í¯»°Íõ¹ú¡±µ¤ÂóÃÉÐß</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716756.md#1">ÕÅÁÖ£ºÐÂ½®¼¯ÖÐÓª»á¹Ø±ÕÂð£¿</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716727.md#1">ÏÄÁÖ:±±Ô¼¶ÔÖÐ¹²µÄ¾¯ÐÑ</a><br>
+<a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716423.md#1">ÖÜÏþ»Ô£º±±¾©¸ß²ã°²ÅÅºóÂ· ÖÐ¹úÈËÔõÃ´°ì£¿</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716683.md#1">ÍõÓÑÈº£ºÌ¨Íå2020Äê×ÜÍ³´óÑ¡½á¹û»áÔõÑù</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716611.md#1">ºÎÇåÁ°£ºÕÆÃÅ´ó·½¡°ÈÝ´í¡± ¹ÙÉÌ¡°´÷×ïÁ¢¹¦¡±</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706333.md#1">ÀîÐñÍ®£ºÍÚ¾òÎåÇ§ÄêÎÄÃ÷¾ªÊÀ±¦²Ø£¨8£©</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715069.md#1">¡¾Ãû¼Ò×¨À¸¡¿ÃÀÃ½¡°ÕþÖÎ¡±±»Ö¸ÓëÖÐ¹²½áÃË</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715351.md#1">³ÂË¼Ãô£ºÖÐ¹²Ã÷ÄêGDPÔö³¤ÊÜÃÀ¹ú¹ØË°Ó°Ïì´ó</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11715096.md#1">ÐÂÖÝ£ºÖÐ¹²¶ñÍ½³ÖÐøÔâ¶ñ±¨ËµÃ÷ÁËÊ²Ã´£¿</a><br>
-<a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11714972.md#1">ÍõÓÑÈº£º2019ÄêÃÀ¹ú·´»÷ÖÐ¹²Ê®´ó¾Ù´ë</a><br>
 <br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1">¸ü¶à......</a></p><hr><h2><p><strong>¶À¼ÒÊÓ½Ç</strong></p></h2>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705858.md#1">ÃÀÖÐ¹ØÏµ¿ìËÙ¶ñ»¯ Ñ§Õß£ºÐÂÀäÕ½ÒÑ¿ªÊ¼</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706190.md#1">¡¾ÐÂÎÅ¿´µã¡¿¸Û¾¯Ò»¸ç¸°¾©Ç°º°»° ÃñÕóÅ­í¡</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11704130.md#1">¡¾Ê®×ÖÂ·¿Ú¡¿·¿Æó¼¯ÌåÆÆ²ú ÖÐ¹úÕ®Îñ·ç±©À´Ï®</a><br>
 <br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/nf6092.md#1">¸ü¶à......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11717043.md#1">¡¾·­Ç½±Ø¿´¡¿ÖÐ¹²¸ß²ãÎª×Ô¼º×¼±¸ºóÂ·</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/12/n11716997.md#1">ÀîÎÄ×ã»ñ·¨µÂÈËÈ¨·¨ÖÎ½± ¹ú±£Óû×èÁì½±²»¹û</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716813.md#1">ÍâÃ½£ºÈ±ÉÙÎüÒýÁ¦ ÈËÃñ±Ò¹ú¼Ê»¯ÏÝÈëÍ£ÖÍ</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716783.md#1">¡¶½ûÃÉÃæ·¨¡·Ê§Ð§ Áº¼Ò½Ü£º±±¾©Ã»ÓÐÑ¡ÔñÓàµØ</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716583.md#1">¡¾ÌÆ¾¸Ô¶¿ìÆÀ¡¿·ÙÊéÐÂÎÅ»÷ÖÐÈËÐÄÖÐÊ²Ã´¿Ö¾å£¿</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716629.md#1">½û×Ô´ø¹Ç»ÒºÐ ºþÄÏéëÒÇ¹Ý×ÔÂôÓâÍòÔªÒ»¸ö</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716496.md#1">Ò»ÆûÏÄÀûÍË³öÊÐ³¡  ÖÐ¹ú×ÔÖ÷Æ·ÅÆÔÙÕÛêª</a><br>
-<a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716423.md#1">ÖÜÏþ»Ô£º±±¾©¸ß²ã°²ÅÅºóÂ· ÖÐ¹úÈËÔõÃ´°ì£¿</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716545.md#1">µÏÊ¿ÄáµçÓ°ÄêÆ±·¿ÆÆ100ÒÚÃÀÔª ´´Ó°Ê·¼ÍÂ¼</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716717.md#1">¸ßÒÔÏè´ú±í×÷²åÇúÖ÷³ª´ÇÊÀ ·¶·¶£ºÌ«¶àÉËÐÄÊÂ</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716656.md#1">ÒßÇéÀ©´ó ¹þ¶û±õÔÙÓÐ13ÃûÑ§Éú¸ÐÈ¾²¼²¡</a><br>
@@ -88,7 +88,7 @@
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714584.md#1">ÖÐ¹úÃñÆóÉú´æÏÝÀ§¾³ ¡°¹ú×ÊÏµ¡±³Ã»úÊÕ±à</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714227.md#1">±»Ä¨ºÚºÍÔìÒ¥ÄÃÃÀ¹úÂÌ¿¨ »ÆÖ®·æ³°·íÎåÃ«Î±Ôì</a><br>
 <a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713973.md#1">ÖÐ¹²ÏÞ¹ÅÁîÔÙÉý¼¶ ¸÷Æ½Ì¨Ã¿ÔÂÏÞ²¥Ò»²¿¹Å×°¾ç</a><br>
-<br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ">ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³">¾ÅÆÀ¹²²úµ³</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ">¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"">ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý">ÆÊÎö1400Àý</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì">Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°">Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯">¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª">ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½">ÌúÖ¤ÈçÉ½</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ">Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦">µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ">ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá">Ë«³ÇÑªÀá</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤">ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720">´Ó610µ½720</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ">ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà">ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó">±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513">¼ûÖ¤513</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ">¹¦·ò Ñ°µÀ</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£">¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ">ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ">ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://d16sy8cx0fkqzo.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²">Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ">ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª">¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·">Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨">303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î">º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½">Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°">²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
+<br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ">ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³">¾ÅÆÀ¹²²úµ³</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ">¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"">ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý">ÆÊÎö1400Àý</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì">Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°">Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯">¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª">ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½">ÌúÖ¤ÈçÉ½</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ">Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦">µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ">ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá">Ë«³ÇÑªÀá</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤">ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720">´Ó610µ½720</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ">ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà">ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó">±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513">¼ûÖ¤513</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ">¹¦·ò Ñ°µÀ</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£">¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ">ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ">ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://dcmru6zh4h5on.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²">Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ">ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª">¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·">Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨">303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î">º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½">Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nexmjc248/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°">²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714039.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/08/c700ac8e244d0376578408ea8552d6db-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714039.md#1">¹¢ºÍ£ºÊÀ½çÂÉÊ¦ÎðÖúæûÎªÅ° ´ÙÖÐ¹²ÊÍ·Å¸ßÖÇêÉ</a><br>¸ßÖÇêÉµÄÌ«Ì«¹¢ºÍÏò¡°ÊÀ½çÂÉÊ¦´ó»á¡± ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713536.md#1">×Í²©¹«°²¾ÖÕÅÄÏ·Ö¾ÖÇ°610Ö÷ÈÎÂÞÖÒ±»¾Ù±¨</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713042.md#1">¹ú¼ÊÈËÈ¨ÈÕ ÂÉÊ¦¼ÒÊôÒªÇóÖÐ¹²Í£Ö¹ÆÈº¦</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713371.md#1">Å·ÃËÍâ³¤»áÒé¾ö¶¨£ºÒýÈëÈ«ÇòÈËÈ¨ÎÊÔðÏµÍ³</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711400.md#1">¹ú¼ÊÈËÈ¨ÈÕ ¿´ÖÐ¹²ÆÈº¦·¨ÂÖ¹¦ÖÁ½ñÈÔ²ÒÁÒ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713112.md#1">³ÌÏþÈÝ£º¹ú¼ÊÉç»áÓ¦¹Ø×¢×î´óµÄÈËÈ¨ÔÖÄÑ</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714340.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2010/03/1003181822012054-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714340.md#1">»ÝÓþ£ºÖÐ¹úÃñÆóÎ¥Ô¼ÂÊ´´ÐÂ¸ß Ã÷Äê·çÏÕ³ÖÐø</a><br>»ÝÓþÆÀ¼¶»ú¹¹£¨Fitch Ratings£©ÖÐ¹úÆ ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714416.md#1">»ÝÓþ£ºÖÐ¹úÇ°11ÔÂÃñÆóÕ®Î¥Ô¼ÂÊ´´ÐÂ¸ß</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714155.md#1">ÃÀÍÆ³Ù15ÈÕÐÂ¹ØË°£¿¿âµÂÂå£ºÈÔ¿ÉÄÜ¼ÓÕ÷</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714051.md#1">·ÖÎö£ºÖÐ¹ú¾­¼ÃÈë·çÏÕ±©Â¶Ê±´ú Í¶×ÊÐè½÷É÷</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713610.md#1">ÖÐ¹ú¾­¼ÃË¥ÍËÎ´Ö¹ Í¨ÕÍÈ´´´8ÄêÐÂ¸ß</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714079.md#1">ÍõÎÀÐ¶ÈÎË³·áÉÌÃ³¶­ÊÂ³¤ ¶àÎ»¶­ÊÂÍË³ö</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714478.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/07/Capture-8-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714478.md#1">ÃÀÑ§½çÓëÖÇ¿â±¨¸æ£ºÖÐ¹²´óÈö±ÒÍâ½»ÄÑÂòÈËÐÄ</a><br>ÃÀ¹úÑ§½çÓëÖÇ¿â10ÈÕ¹«²¼Ò»·ÝÓÐ¹ØÖÐ¹² ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714293.md#1">ÖÐ¹²¿Õ¾ü0:4°ÜÓÚÌ©¾ü ¿Õ¾ü´óÐ£ÑÝ½²Ð¹ÕæÏà</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714373.md#1">¡¾ÈÈµã»¥¶¯¡¿ÃÀ·´¶ÔÊÀÐÐ¶ÔÖÐ´û¿î ÊÍÖØ´óÐÅºÅ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11714338.md#1">Ä¨ºÚ»ÆÖ®·æ³ÖÃÀ¹úÂÌ¿¨ Â©¶´°Ù³öÂÙÐ¦±ú</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713799.md#1">¡¾ÐÂÎÅ¿´µã¡¿´Ó·´ËÍÖÐµ½ÇýÖð¹²µ³ ¸ÛÈËÃÍÐÑ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711294.md#1">ÖÐ¸Û¾¯²ìÍ·Ä¿»áÃæ ¹ÙÃ½±¨µ¼²»Í¬µ÷µÄ±³ºó</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÌìÔÖÈË»ö</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711924.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-954036218-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711924.md#1">ÇÖ´óÂ½²¢¶¨Ö³ ²ÝµØÌ°Ò¹¶êÃ÷Äê¿Ö½ø±©·¢½×¶Î</a><br>ÖÐ¹²Å©ÒµÅ©´å²¿³Æ£¬²ÝµØÌ°Ò¹¶ê½ñÄêÈë ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712523.md#1">°²»ÕÁù°²¸ßËÙÂ·½ÓÁ¬·¢Éú³µ»ö ¹²ÖÂ6ËÀ10ÉË</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712260.md#1">Òõö²Ìì´óÂ½¶àµØº½°àÑÓÎó Í¨ÐÐÄÜÁ¦½µ50£¥</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711410.md#1">Òõö²Ï®»ª±±»Æ»´ ±±¾©µÈ55³Ç·¢ÖØÎÛÈ¾Ô¤¾¯</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11710988.md#1">ËÄ´¨ÃàÑô4.6¼¶µØÕð ³É¶¼µÂÑôÕð¸ÐÇ¿ÁÒ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/8/n11708036.md#1">¾©½ò¼½¶àµØ³ÖÐøÒõö²Ìì º½°à¸ßËÙÂ·¾ùÊÜÓ°Ïì</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid280.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713860.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1193118589-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713860.md#1">ÖÚÔºÃñÖ÷µ³Ìá2Ïîµ¯ÛÀÖ¸¿Ø ´¨ÆÕ»ØÓ¦£º»ÄÃý</a><br>ÃÀ¹úÖÚÒéÔºÃñÖ÷µ³ÈËÖÜ¶þ£¨12ÔÂ10ÈÕ£© ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713953.md#1">¹ØÑºÁ½Ãû¼Ó¹úÈËÒ»Äêºó ÖÐ¹²³ÆÆä±»Éó²éºÍÆðËß</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713745.md#1">²ØÉí¼Ò¾ß´ÓÄ«Î÷¸çÍµ¶ÉÃÀ¹ú 11ÖÐ¹úÈË±»¾Ð</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713224.md#1">ÊÓ¾õÖÐ¹úÔÙÔâÖÐ¹²ÍøÐÅ°ìÔ¼Ì¸ ±»ÆÈÔÝÍ£·þÎñ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713237.md#1">´óÂ½³öÏÖ¶þÀýÐÂH9N2Á÷¸Ð²¡Àý</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712915.md#1">¡°±ù»¨ÄÐº¢¡±¼ÒÉêÇëÆ¶À§»§ ´å¹Ù£º²»¹»±ê×¼</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712329.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_5224-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712329.md#1">¡¶¼Ù¿××ÓÖ®Ãû¡·Ä½ÄáºÚ·ÅÓ³ ½ÒÂ¶ÖÐ¹²ÉøÍ¸</a><br>»ñ½±Ó°Æ¬¡¶¼Ù¿××ÓÖ®Ãû¡·Ä¿Ç°ÕýÔÚµÂ¹ú ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11712101.md#1">»ªÈË¼Ò³¤£º¿××ÓÑ§ÔºÅàÑøÖÐµÂ»ìÑª¶ù ÒâÔÚÉøÍ¸</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11710758.md#1">ÖÐ¹ú¿ÆÑ§¼Ò´´Öíºï»ìÖÖ¶¯Îï ¹ú¼Ê¿ÆÑ§¼ÒÇ´Ôð</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11706340.md#1">ÖÐ¹²³ÍÖÎË«ÖØ¹ú¼®£¿ÀîÁ¬½ÜµÈÃ÷ÐÇ±»Íø¾¯µãÃû</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/6/n11705412.md#1">À¼ÖÝÊÞÑÐËù65ÈËÑªÇåÑ§ÑôÐÔ ÒÉËÆ²¼²¡¸ÐÈ¾</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703633.md#1">¾©¾çÑÝÔ±½ªÒàÉºÍ»È»ÀëÊÀ Äê½ö41Ëê</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11707663.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_586447673-600x400-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11707663.md#1">ÃÀÍ¼Æ¬ÉÌÅäºÏÖÐ¹²½¨ºÚÃûµ¥ Ô±¹¤ÇëÔ¸º°Í£</a><br>ÃÀ¹úÔÚÏßÐÂÎÅÍøÕ¾¡°The Intercept¡±Ö ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11703901.md#1">»ªÎªÊ§ÃñÐÄ ÃÏÍíÖÛ¼¦ÌÀÐÅ°Ü¸øÀîºéÔª251</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11697873.md#1">¸ÛÈËÉí·Ý±äÃô¸Ð£¿½»ÒøÏã¸ÛÊ×Ï¯¾­¼ÃÊ¦±»³´</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698082.md#1">¸üÑÏÖÆ²Ã ´«°×¹¬Äâ½«»ªÎªÌÞ³öÃÀÒøÐÐÌåÏµ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11696142.md#1">ÖÐ¹²ÖÆ²ÃÃÀÈËÈ¨×éÖ¯ ±»Ö¸¡°À×Éù´óÓêµãÐ¡¡±</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11696073.md#1">ÃÀ²ÎÒéÔ±»ØÓ¦ÖÐ¹²±¨¸´ Ö¸±±¾©·¢Æ¢ÆøÃ»ÓÃ</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713727.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13942804-150x120.jpg"></a><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713727.md#1">²Î¼ÓÈËÈ¨ÈÕ»î¶¯ ÃÀ×¤»ª´óÊ¹¹ÝÇ°ÊýÊ®ÈË±»×¥</a><br>Ã¿Äê12ÔÂ10ÈÕÊÇÈËÈ¨ÈÕ£¬ÃÀ¹ú×¤»ª´óÊ¹ ...<br><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/7/n11707400.md#1">ÒßÃçÊÜº¦¶ùÍ¯µ½±±¾©ÎÀ½¡Î¯Î¬È¨ ÓÐ¼Ò³¤±»¾Ð</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/5/n11701647.md#1">·¨ÖÆÈÕ¸÷µØÃñÖÚÎ¬È¨ ¹úÐÅ¾Ö·ÃÃñÈËÍ·Ó¿Ó¿</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/3/n11698433.md#1">ÖÐ¹²¾å¿¹ÕùÂûÑÓÈ«¹ú Ã¯Ãû¡°Ê±´ú¸ïÃü¡±³É¹¦</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/1/n11692726.md#1">Íø´«¹ã¶«´åÃñº°¡°Ê±´ú¸ïÃü¡±·´¿¹¾¯²ìÕòÑ¹</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/11/30/n11691986.md#1">ÍâÃ½£ºÖÐ¹²¼à¿Ø¹úÃñ ½«ÖÇÄÜÊÖ»úÎäÆ÷»¯</a><br><br><p><a href="https://github.com/nexmjc248/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>¾ÅÆÀ¹²²úµ³</strong></p></h2><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">¡¾Ò»¡¿ÆÀ¹²²úµ³ÊÇÊ²Ã´</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">¡¾¶þ¡¿ÆÀÖÐ¹ú¹²²úµ³ÊÇÔõÑùÆð¼ÒµÄ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">¡¾Èý¡¿ÆÀÖÐ¹ú¹²²úµ³µÄ±©Õþ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">¡¾ËÄ¡¿ÆÀ¹²²úµ³ÊÇ·´ÓîÖæµÄÁ¦Á¿</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">¡¾Îå¡¿ÆÀ½­ÔóÃñÓëÖÐ¹²Ïà»¥ÀûÓÃÆÈº¦·¨ÂÖ¹¦</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">¡¾Áù¡¿ÆÀÖÐ¹ú¹²²úµ³ÆÆ»µÃñ×åÎÄ»¯</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">¡¾Æß¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÉ±ÈËÀúÊ·</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">¡¾°Ë¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÐ°½Ì±¾ÖÊ</a><br><a href="https://github.com/nexmjc248/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">¡¾¾Å¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÁ÷Ã¥±¾ÐÔ</a></td><td VALIGN=TOP width="352"><h2><p><strong>ÈýÍË´ó³±</strong></p></h2><strong>ÍË³öÖÐ¹²µ³¡¢ÍÅ¡¢¶Ó×ÜÈËÊý:
 
